--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -123,6 +123,35 @@ jobs:
           echo "key.properties content:"
           cat ${{ env.ANDROID_DIR }}/key.properties
 
+      - name: Add Google Play Core dependency
+        working-directory: ${{ env.WORKDIR }}
+        run: |
+          if [ -f "android/app/build.gradle.kts" ]; then
+            # Check if the dependency is already added
+            if ! grep -q "com.google.android.play:core" "android/app/build.gradle.kts"; then
+              # For Kotlin DSL build.gradle.kts
+              echo 'Adding dependencies block with Play Core to build.gradle.kts'
+              echo '
+dependencies {
+    // Add Play Core library for dynamic feature delivery support
+    implementation("com.google.android.play:core:1.10.3")
+}' >> "android/app/build.gradle.kts"
+            fi
+          elif [ -f "android/app/build.gradle" ]; then
+            # Check if the dependency is already added
+            if ! grep -q "com.google.android.play:core" "android/app/build.gradle"; then
+              # For Groovy build.gradle
+              echo 'Adding dependencies block with Play Core to build.gradle'
+              echo '
+dependencies {
+    // Add Play Core library for dynamic feature delivery support
+    implementation "com.google.android.play:core:1.10.3"
+}' >> "android/app/build.gradle"
+            fi
+          else
+            echo "Warning: Could not find build.gradle or build.gradle.kts file!"
+          fi
+
       - name: Add stub root AndroidManifest
         working-directory: ${{ env.WORKDIR }}
         run: |
